--- a/AppMusic/Views/Get_info_user.xaml
+++ b/AppMusic/Views/Get_info_user.xaml
@@ -8,36 +8,41 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <StackPanel Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Name"></TextBlock>
-                <TextBlock x:Name="txt_name" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Email"></TextBlock>
-                <TextBlock x:Name="txt_email" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Phone"></TextBlock>
-                <TextBlock x:Name="txt_phone" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Address"></TextBlock>
-                <TextBlock x:Name="txt_address" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Gender"></TextBlock>
-                <TextBlock x:Name="txt_gender" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="birthday"></TextBlock>
-                <TextBlock x:Name="txt_birthday" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Indtroduction"></TextBlock>
-                <TextBlock x:Name="txt_introduction" Margin="20,0,0,0"></TextBlock>
-            </StackPanel>
+    <Grid Background="#1B1B1B">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <StackPanel Margin="0,0,0,30" HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.Row="1">
+            <PersonPicture Margin="0,50,0,0"
+                           DisplayName="Betsy Sherman"
+                           x:Name="txt_avatar" />
+            <TextBlock Foreground="White" x:Name="name" Style="{ThemeResource SubheaderTextBlockStyle}"  Margin="10,0,0,0"></TextBlock>
         </StackPanel>
+        
+        <StackPanel HorizontalAlignment="Stretch" Margin="30,10,10,0" Grid.Row="2">
+            <TextBlock Foreground="#C1C3C6" Margin="0,10,0,0" Text="Email"></TextBlock>
+            <TextBlock Foreground="#C1C3C6"  Margin="0,30,0,0" Text="Điện thoại"></TextBlock>
+            <!--<TextBlock Margin="0,30,0,0" Text="Địa chỉ"></TextBlock>-->
+            <TextBlock Foreground="#C1C3C6" Margin="0,30,0,0" Text="Giới tính"></TextBlock>
+            <TextBlock Foreground="#C1C3C6" Margin="0,30,0,0" Text="Sinh nhật"></TextBlock>
+            <!--<TextBlock Margin="0,30,0,0" Text="Giới thiệu"></TextBlock>-->
+        </StackPanel>
+        <StackPanel  HorizontalAlignment="Stretch" Margin="0,10,0,0" Grid.Row="2" Grid.Column="1" >
+            <!--<TextBlock> Hello</TextBlock>-->
+
+            <TextBlock Foreground="#C1C3C6" x:Name="txt_email" Margin="0,10,0,0"></TextBlock>
+            <TextBlock Foreground="#C1C3C6" x:Name="txt_phone" Margin="0,30,0,0"></TextBlock>
+            <!--<TextBlock x:Name="txt_address" Margin="10,10,0,0"></TextBlock>-->
+            <TextBlock Foreground="#C1C3C6" x:Name="txt_gender" Margin="0,30,0,0"></TextBlock>
+            <TextBlock Foreground="#C1C3C6" x:Name="txt_birthday" Margin="0,30,0,0"></TextBlock>
+            <!--<TextBlock x:Name="txt_introduction" Margin="10,10,0,0"></TextBlock>-->
+        </StackPanel>
+        
     </Grid>
 </Page>
